# grub

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  deploy-website.yml  publish.yml
assets/mascot/: README.md
cli/: Cargo.toml
cli/src/: config.rs  main.rs  openfoodfacts.rs  server.rs  tls.rs
cli/src/commands/: helpers.rs  import.rs  log.rs  meal.rs  mod.rs  recipe.rs  search.rs  summary.rs  target.rs  weight.rs
core/: Cargo.toml
core/src/: db.rs  lib.rs  mfp_import.rs  models.rs  openfoodfacts.rs  service.rs
website/: CNAME  index.html  styles.css
