[package]
name = "grub"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A simple, local-first calorie tracker CLI"
license = "MIT"
repository = "https://github.com/grub-tools/grub"

[dependencies]
grub-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
directories = "5"
tabled = "0.15"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
tower-http = { version = "0.6", features = ["limit"] }
cooklang = "0.17"
sha2 = "0.10"
rustls-pemfile = "2"
rand = "0.9"
qrcode = "0.14"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
